# cvgames

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  sync_modules.sh
.github/workflows/: package.yml
deepface-auth/: api.py  filex.py  media.py  mqttc.py  mqttw.py  pgdb.py  requirements.txt
deepface-pgvector/: README.md  celery_worker.py  main.py  requirements.txt
docs/: app.js  cvgames_data.json  documentation.md  index.html  milestones.md  proposal.md  style.css
mediapipe-body/: requirements.txt
mediapipe-calculator/: main.py
mediapipe-catalog/: main.py  requirements.txt
mediapipe-dragdrop/: main.py  requirements.txt
mediapipe-face/: requirements.txt
mediapipe-hands/: requirements.txt
mediapipe-holistic/: requirements.txt
mediapipe-keyboard/: requirements.txt
mediapipe-mario/: main.py  requirements.txt
mediapipe-objectron/: requirements.txt
mediapipe-ponggame/: requirements.txt
mediapipe-quizgame/: main.py
mediapipe-quizgame/Resources/: Questions.csv
mediapipe-resizer/: requirements.txt
mediapipe-selfie/: main.py
mediapipe-smile/: main.py  requirements.txt  setup.py
mediapipe-snake/: requirements.txt
mediapipe-space-invaders/: README.md  main.py
mediapipe-tetris/: requirements.txt
mediapipe-tictactoe/: main.py  requirements.txt
mediapipe-volumectrl/: requirements.txt
mediapipe-webshop/: requirements.txt
mediapipe-website-designer/: README.md  main.py  requirements.txt
mediapipe-wireframe/: requirements.txt
src/body/: PLAYER.md  __init__.py
src/bodymovementchallenge/: __init__.py
src/calculator/: PLAYER.md  __init__.py
src/catalog/: PLAYER.md  README.md
src/circus/: PLAYER.md
src/circusperformer/: __init__.py
src/commander/: PLAYER.md  __init__.py
src/conductor/: PLAYER.md
src/dance/: PLAYER.md  __init__.py
src/darts/: PLAYER.md
src/designer/: PLAYER.md
src/dragdrop/: PLAYER.md
src/drive/: PLAYER.md  __init__.py
src/drivesimulator/: __init__.py
src/elsa/: PLAYER.md  README.md  __init__.py
src/emotionmirror/: __init__.py
src/eyetictactoe/: __init__.py
src/face/: PLAYER.md  __init__.py
src/facefilterfun/: __init__.py
src/fitness/: PLAYER.md
src/fitnesstrainer/: __init__.py
src/gesturequiz/: __init__.py
src/hands/: PLAYER.md  __init__.py
src/holistic/: PLAYER.md
src/keyboard/: PLAYER.md
src/mario/: PLAYER.md  README.md  __init__.py
src/mirror/: PLAYER.md
src/objectron/: PLAYER.md
src/overlay/: PLAYER.md
src/paint/: PLAYER.md  __init__.py
src/pong/: PLAYER.md  __init__.py
src/pongchallenge/: __init__.py
src/puzzle/: PLAYER.md
src/puzzlemaster/: __init__.py
src/quiz/: PLAYER.md  __init__.py
src/resizer/: PLAYER.md
src/rps/: PLAYER.md  __init__.py
src/selfie/: PLAYER.md  __init__.py
src/shooter/: PLAYER.md  __init__.py
src/smile/: PLAYER.md  __init__.py
src/smiledetector/: __init__.py
src/snake/: PLAYER.md  __init__.py
src/soundconductor/: __init__.py
src/space/: PLAYER.md
src/spaceinvaders/: __init__.py
src/story/: PLAYER.md  __init__.py
src/tetris/: PLAYER.md  __init__.py
src/tetristwist/: __init__.py
src/tictactoe/: PLAYER.md
src/utils/: loading_screen.py
src/vdarts/: __init__.py
src/virtualcalculator/: __init__.py
(+4 files in other folders)
