[build-system]
requires = ["setuptools", "wheel", "uv", "black", "isort"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-games"
version = "0.1.0"
description = "MonoRepo for all computer vision based games"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "screeninfo",
    "cvzone",
    "deepface",
    "tensorflow",
    "tf-keras",
    "pygame",
    "pycaw",
    "fastapi",
    "uvicorn",
    "PySide6", 
    "PyQt6",   
    "argparse",
    "python-dotenv",
    "pyaudio",
    "pydub",
    "beautifulsoup4",
    "requests",
    "pyttsx3",
    "pywhatkit",
    "pyautogui",
    "pyperclip",
    "pytesseract",
]

[project.scripts]
airpainter = "airpainter:main"
body = "body:main"
bodymovementchallenge = "bodymovementchallenge:main"
calculator = "calculator:main"
drivesimulator = "drivesimulator:main"
eyeshooter = "eyeshooter:main"
eyetictactoe = "eyetictactoe:main"
face = "face:main"
fitness = "fitness:main"
gesturecommander = "gesturecommander:main"
gesturequiz = "gesturequiz:main"
keyboard = "keyboard:main"
mario = "mario:main"
ponggame = "ponggame:main"
quizgame = "quizgame:main"
selfie = "selfie:main"
smile = "smile:main"
snake = "snake:main"
spaceinvaders = "spaceinvaders:main"
tetris = "tetris:main"
tictactoe = "tictactoe:main"
virtualcalculator = "virtualcalculator:main"
virtualkeyboard = "virtualkeyboard:main"
virtualpong = "virtualpong:main"
