[build-system]
requires = ["setuptools", "wheel", "uv", "black", "isort"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-games"
version = "0.1.0"
description = "MonoRepo for all computer vision based games"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "screeninfo",
    "cvzone",
    "deepface",
    "tensorflow",
    "tf-keras",
    "pygame",
    "pycaw",
    "fastapi",
    "uvicorn",
    "PySide6", 
    "PyQt6",   
    "argparse",
    "python-dotenv",
    "pyaudio",
    "pydub",
    "beautifulsoup4",
    "requests",
    "pyttsx3",
    "pywhatkit",
    "pyautogui",
    "pyperclip",
    "pytesseract",
    "screeninfo"
]

[project.scripts]
body = "body:main"
calculator = "calculator:main"
circus = "circus:main"
commander = "commander:main"
conductor = "conductor:main"
dance = "dance:main"
darts = "darts:main"
designer = "designer:main"
dragdrop = "dragdrop:main"
drive = "drive:main"
elsa = "elsa:main"
face = "face:main"
fitness = "fitness:main"
hands = "hands:main"
holistic = "holistic:main"
keyboard = "keyboard:main"
mario = "mario:main"
mirror = "mirror:main"
objectron = "objectron:main"
overlay = "overlay:main"
paint = "paint:main"
pong = "pong:main"
puzzle = "puzzle:main"
quiz = "quiz:main"
resizer = "resizer:main"
rps = "rps:main"
selfie = "selfie:main"
selfiefun = "selfiefun:main"
shooter = "shooter:main"
smile = "smile:main"
snake = "snake:main"
space = "space:main"
story = "story:main"
tetris = "tetris:main"
tictactoe = "tictactoe:main"
volume = "volume:main"
webshop = "webshop:main"
wireframe = "wireframe:main"
